# github-summarizer

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/api/: client.rs  issues.rs  mod.rs  pull_requests.rs  repositories.rs
