[package]
name = "github-summarizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde", "serde-well-known", "formatting"] }
tokio = { version = "1.45.1", features = ["full"] }
